--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
     "@types/lodash": "^4.14.200",
-    "daisyui": "^3.9.3"
+    "daisyui": "^3.9.3",
+    "encoding": "^0.1.13"
   }
 }
